* fixed/updated Subscene scraper * fixed/updated Sublight webservice * updated test cases related to various web resources