@@ -7,7 +7,8 @@ import static org.junit.Assert.*;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.URL;
-import java.util.LinkedList;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.zip.GZIPInputStream;
 
 import org.junit.Test;
@@ -17,7 +18,7 @@ public class SubRipReaderTest {
 	
 	@Test
 	public void parse() throws Exception {
-		LinkedList<SubtitleElement> list = new LinkedList<SubtitleElement>();
+		List<SubtitleElement> list = new ArrayList<SubtitleElement>();
 		
 		URL resource = new URL("http://www.opensubtitles.org/en/download/file/1951733951.gz");
 		InputStream source = new GZIPInputStream(resource.openStream());
@@ -32,12 +33,12 @@ public class SubRipReaderTest {
 			reader.close();
 		}
 		
-		assertEquals(499, list.size(), 0);
+		assertEquals(501, list.size(), 0);
 		
-		assertEquals(3455, list.getFirst().getStart(), 0);
-		assertEquals(6799, list.getFirst().getEnd(), 0);
+		assertEquals(3455, list.get(0).getStart(), 0);
+		assertEquals(6799, list.get(0).getEnd(), 0);
 		
-		assertEquals("Come with me if you want to live.", list.get(253).getText());
+		assertEquals("Come with me if you want to live.", list.get(254).getText());
 	}
 	
 }
